<?xml version="1.0"?>
<package format="2">
  <name>rrt_planner</name>
  <version>0.0.0</version>
  <description>The rrt_planner package</description>

  <maintainer email="satoshi.ota928@gmail.com">Satoshi Ota</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>

</package>
