<?xml version="1.0"?>
<package format="2">
  <name>rrt_planner</name>
  <version>0.0.0</version>
  <description>The rrt_planner package</description>

  <maintainer email="satoshi.ota928@gmail.com">Satoshi Ota</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
